input-capture: impl protocol

--- a/.github/actions/setup_base/action.yml
+++ b/.github/actions/setup_base/action.yml
@@ -30,6 +30,7 @@ runs:
           libc++ \
           libdisplay-info \
           libdrm \
+          libei \
           libepoxy \
           libfontenc \
           libglvnd \
