--- a/protocols/meson.build
+++ b/protocols/meson.build
@@ -7,7 +7,7 @@ wayland_protos = dependency(
 
 hyprland_protos = dependency(
 	'hyprland-protocols',
-	version: '>=0.6.4',
+	version: '>=0.7.0',
 	fallback: 'hyprland-protocols',
 )
 
@@ -42,6 +42,7 @@ protocols = [
 	hyprland_protocol_dir / 'protocols/hyprland-ctm-control-v1.xml',
 	hyprland_protocol_dir / 'protocols/hyprland-surface-v1.xml',
 	hyprland_protocol_dir / 'protocols/hyprland-lock-notify-v1.xml',
+	hyprland_protocol_dir / 'protocols/hyprland-input-capture-v1.xml',
 	wayland_protocol_dir / 'staging/tearing-control/tearing-control-v1.xml',
 	wayland_protocol_dir / 'staging/fractional-scale/fractional-scale-v1.xml',
 	wayland_protocol_dir / 'unstable/xdg-output/xdg-output-unstable-v1.xml',
